# Google_meet

./: Dockerfile  LICENSE  docker-compose.yml  main.py  pyproject.toml
for_user/: config.json
for_user/utils/: json_to_variable.py
mail/: 1663_event.ics  invite.ics  read_mail.py
mail/service/: service.py
mail/utils/: body_email_to_string.py  connect_and_find_mails.py  string_to_email.py  titel_to_string.py  treatment_mail.py
notion/: .env  api_notion.py  test.py
notion/utils/: create_comment.py  get_page.py  search.py  search_people.py
obrabotka_text/: test.py
obrabotka_text/service/: service.py
obrabotka_text/utils/: obrezka_text.py  search_all_notion.py  text_analysis.py  text_compression.py  url_to_page_id.py
